# cmb_skypatch

./: .gitattributes  .gitignore  README.md  README.rst  config.json  requirements.txt  setup.cfg
cmb_skypatch/: __init__.py  analytic.py__backup  config.json  lib.py  lib_emp.py  main.py  plot.py  run_skypatch.py  skypatchcombination_withdata.py
notebooks/: main.py  tutorial.ipynb
