[metadata]
name=cmb_skypatch
version = attr: cmb_skypatch.__VERSION__
description = attr: cmb_skypatch.__desctiption__
author = attr: cmb_skypatch.__author__
author_email = attr: cmb_skypatch.__author_email__
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
#long-description = file: description.rst

[options]
include_package_data = True
packages = find:
